Correciones orden de carpetas

--- a/playbook/correo.yml
+++ b/playbook/correo.yml
@@ -23,7 +23,7 @@
   
   - name: Configure mail server
     template:
-      src: ./postfix-main.cf.j2
+      src: template/postfix-main.cf.j2
       dest: /etc/postfix/main.cf
       owner: root
       group: root
@@ -67,7 +67,7 @@
 
   - name: Configure squirrelmail
     template:
-      src: ./squirrelmail.conf.j2
+      src: template/squirrelmail.conf.j2
       dest: /etc/squirrelmail/config.php
       owner: root
       group: root
